--- a/About.html
+++ b/About.html
@@ -18,13 +18,17 @@
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
-		"name": ""
+		"name": "",
+		"logo": "images/1672142872285.png"
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="About">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-899a"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-899a"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1080" data-image-height="1080">
+          <img src="images/1672142872285.png" class="u-logo-image u-logo-image-1">
+        </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
@@ -71,7 +75,7 @@
                   </div>
                   <div class="u-container-align-left-sm u-container-align-left-xs u-container-style u-layout-cell u-size-14 u-layout-cell-2">
                     <div class="u-container-layout u-valign-middle u-container-layout-2">
-                      <img class="u-image u-image-circle u-image-1" src="images/758b5559-c3ba-4155-a732-78d6fab8bfcd.jpg" alt="" data-image-width="1500" data-image-height="1000">
+                      <img class="u-image u-image-circle u-image-1" src="images/1672142872285.png" alt="" data-image-width="1080" data-image-height="1080">
                     </div>
                   </div>
                   <div class="u-container-align-right-sm u-container-align-right-xs u-container-style u-layout-cell u-size-23 u-layout-cell-3">
@@ -104,7 +108,7 @@
                   </div>
                   <div class="u-container-align-right-sm u-container-align-right-xs u-container-style u-layout-cell u-size-14 u-layout-cell-5">
                     <div class="u-container-layout u-valign-middle u-container-layout-5">
-                      <img class="u-image u-image-circle u-image-2" src="images/a7c767cf-3a26-4f01-874d-14261d2c39a7.jpg" alt="" data-image-width="1619" data-image-height="1080">
+                      <img class="u-image u-image-circle u-image-2" src="images/1672142872285.png" alt="" data-image-width="1080" data-image-height="1080">
                     </div>
                   </div>
                   <div class="u-container-align-left u-container-style u-layout-cell u-size-23 u-layout-cell-6">
@@ -126,7 +130,7 @@
                   </div>
                   <div class="u-container-align-center-md u-container-align-left-sm u-container-align-left-xs u-container-style u-layout-cell u-size-14 u-layout-cell-8">
                     <div class="u-container-layout u-container-layout-8">
-                      <img class="u-image u-image-circle u-image-3" src="images/e916e899-9128-4aac-8760-007d5815c973.jpg" alt="" data-image-width="1500" data-image-height="1000">
+                      <img class="u-image u-image-circle u-image-3" src="images/1672142872285.png" alt="" data-image-width="1080" data-image-height="1080">
                     </div>
                   </div>
                   <div class="u-container-align-right-sm u-container-align-right-xs u-container-style u-layout-cell u-size-23 u-layout-cell-9">
@@ -151,7 +155,7 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-592e"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the Text Element.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1">Contact.&nbsp;</p>
       </div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
       <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
