--- a/Publication.html
+++ b/Publication.html
@@ -130,7 +130,7 @@
           <li style="padding-left: 6px;">Park, J. Kang, S. and <span style="font-weight: 700;">Jin, I.H.</span> (2022) Control of Frequentist Type I Error Rates in Hierarchical Linear Models for Multiregional Clinical Trials Using a<br>Bayesian Approach. Accepted with Minor Revision to <span style="font-style: italic;">Journal of Biopharmaceutical Statistics</span>.
           </li>
           <li style="padding-left: 6px;">
-            <span style="text-decoration: underline !important;">D. Ko</span>, Im, J., and <span style="font-weight: 700;">Jin, I.H.</span> (2022) Quantile Regression with Multiple Proxy Variables. Accepted with Minor Revision to <span style="font-style: italic;">Stat</span>. <a herf="https://arxiv.org/abs/1810.05297" target="_blank">ArXiv:2112.12904.</a><br>
+            <span style="text-decoration: underline !important;">D. Ko</span>, Im, J., and <span style="font-weight: 700;">Jin, I.H.</span> (2022) Quantile Regression with Multiple Proxy Variables. Accepted with Minor Revision to <span style="font-style: italic;">Stat</span>. <a href="https://arxiv.org/abs/1810.05297" target="_blank">ArXiv:2112.12904.</a><br>
           </li>
         </ol>
       </div>
@@ -140,18 +140,18 @@
         <h3 class="u-text u-text-1">Submitted Manuscripts</h3>
         <ol class="u-spacing-13 u-text u-text-2">
           <li style="padding-left: 6px;">
-            <span style="text-decoration: underline !important;">Park, J.</span>, <span style="font-weight: 700;">Jin, I.H.∗</span>, and Jeon, M. (2021) How social network influences human behavior: An integrated latent space approach for social influence. Revision Submitted to <span style="font-style: italic;">Psychometrika</span>. <a herf="https://arxiv.org/abs/2109.05200" target="_blank">ArXiv:2109.05200.</a>
+            <span style="text-decoration: underline !important;">Park, J.</span>, <span style="font-weight: 700;">Jin, I.H.∗</span>, and Jeon, M. (2021) How social network influences human behavior: An integrated latent space approach for social influence. Revision Submitted to <span style="font-style: italic;">Psychometrika</span>. <a href="https://arxiv.org/abs/2109.05200" target="_blank">ArXiv:2109.05200.</a>
           </li>
           <li style="padding-left: 6px;">
-            <span style="text-decoration: underline !important;"> Park, J.</span>, <span style="text-decoration: underline !important;">Hu, W.</span>, <span style="font-weight: 700;">Jin, I.H.∗</span>, Liu, H. and Zang, Y. (2022) A Bayesian Precision Response-adaptive Phase II Clinical Trial Design for Radiotherapies with Competing Risk Survival Outcomes. Submitted to <span style="font-style: italic;">Statistical Methods in Medical Research</span>. <a herf="https://arxiv.org/abs/2203.06830" target="_blank">ArXiv:2203.06830.</a>
+            <span style="text-decoration: underline !important;"> Park, J.</span>, <span style="text-decoration: underline !important;">Hu, W.</span>, <span style="font-weight: 700;">Jin, I.H.∗</span>, Liu, H. and Zang, Y. (2022) A Bayesian Precision Response-adaptive Phase II Clinical Trial Design for Radiotherapies with Competing Risk Survival Outcomes. Submitted to <span style="font-style: italic;">Statistical Methods in Medical Research</span>. <a href="https://arxiv.org/abs/2203.06830" target="_blank">ArXiv:2203.06830.</a>
           </li>
           <li style="padding-left: 6px;">
-            <span style="text-decoration: underline !important;">Jeon, Y.</span>, Chung, D., <span style="text-decoration: underline !important;">Park, J.</span>, and <span style="font-weight: 700;">Jin, I.H.∗</span>(2021) Network-based Trajectory Topic Interaction Map for Text Mining of COVID-19 Biomedical Literature. Submitted to <span style="font-style: italic;">Biometrics</span>. <a herf="https://arxiv.org/abs/2106.07374" target="_blank">ArXiv:2106.07374.</a><br>
+            <span style="text-decoration: underline !important;">Jeon, Y.</span>, Chung, D., <span style="text-decoration: underline !important;">Park, J.</span>, and <span style="font-weight: 700;">Jin, I.H.∗</span>(2021) Network-based Trajectory Topic Interaction Map for Text Mining of COVID-19 Biomedical Literature. Submitted to <span style="font-style: italic;">Biometrics</span>. <a href="https://arxiv.org/abs/2106.07374" target="_blank">ArXiv:2106.07374.</a><br>
           </li>
-          <li style="padding-left: 6px;">Yun, J., <span style="text-decoration: underline !important;">Kim, H.</span>, Jeon, M., <span style="font-weight: 700;">Jin, I.H∗</span>. (2022) Analysis of Connection Times in Bipartite Network Data: Development of the Latent Space Accumulator Model with Applications to Assessment Data. Submitted to <span style="font-style: italic;">Psychometrika</span>. <a herf="https://arxiv.org/abs/2203.14306" target="_blank">ArXiv:2203.14306.</a><br>
+          <li style="padding-left: 6px;">Yun, J., <span style="text-decoration: underline !important;">Kim, H.</span>, Jeon, M., <span style="font-weight: 700;">Jin, I.H∗</span>. (2022) Analysis of Connection Times in Bipartite Network Data: Development of the Latent Space Accumulator Model with Applications to Assessment Data. Submitted to <span style="font-style: italic;">Psychometrika</span>. <a href="https://arxiv.org/abs/2203.14306" target="_blank">ArXiv:2203.14306.</a><br>
           </li>
           <li style="padding-left: 6px;">
-            <span style="text-decoration: underline !important;">Ko, D.</span>, <span style="text-decoration: underline !important;">Park, J.</span>, <span style="text-decoration: underline !important;">Kim, K.</span>, <span style="text-decoration: underline !important;">Park, J.</span>, Jeon, M., and <span style="font-weight: 700;">Jin, I.H.∗</span>(2022) LSIRM: An R Package for a Latent Space Item Response Model with an Interaction Map. Submitted to <span style="font-style: italic;">Journal of Statistical Software</span>. <a herf="https://arxiv.org/abs/2205.06989" target="_blank">ArXiv:2205.06989.</a><br>
+            <span style="text-decoration: underline !important;">Ko, D.</span>, <span style="text-decoration: underline !important;">Park, J.</span>, <span style="text-decoration: underline !important;">Kim, K.</span>, <span style="text-decoration: underline !important;">Park, J.</span>, Jeon, M., and <span style="font-weight: 700;">Jin, I.H.∗</span>(2022) LSIRM: An R Package for a Latent Space Item Response Model with an Interaction Map. Submitted to <span style="font-style: italic;">Journal of Statistical Software</span>. <a href="https://arxiv.org/abs/2205.06989" target="_blank">ArXiv:2205.06989.</a><br>
           </li>
         </ol>
       </div>
@@ -173,10 +173,10 @@
             <span style="font-weight: 700;"> Jin, I.H.</span> and Liang, F. (2009) Bayesian analysis for exponential random graph models using the double Metropolis-Hastings sampler. <span style="font-style: italic;">Technical Report 2009-097</span>. Institute for Applied Mathematics and Computer Science, Texas A&amp;M University
           </li>
           <li>
-            <span style="font-weight: 700;"> Jin, I.H.</span>, Liu, F., <span style="text-decoration: underline !important;">Eugenio, E.</span>, Kim, J., and Liu, S. (2018) Bayesian Hierarchical Spatial Model for Small Area Estimation with Non-ignorable Non-responses and Its Applications to the NHANES Dental Caries Assessments. <a herf="https://arxiv.org/abs/1810.05297" target="_blank">ArXiv:1810.05297.</a>
+            <span style="font-weight: 700;"> Jin, I.H.</span>, Liu, F., <span style="text-decoration: underline !important;">Eugenio, E.</span>, Kim, J., and Liu, S. (2018) Bayesian Hierarchical Spatial Model for Small Area Estimation with Non-ignorable Non-responses and Its Applications to the NHANES Dental Caries Assessments. <a href="https://arxiv.org/abs/1810.05297" target="_blank">ArXiv:1810.05297.</a>
           </li>
           <li>
-            <span style="text-decoration: underline !important;"> Brodersen, A.</span>, <span style="font-weight: 700;">Jin, I.H.</span>, Cheng, Y., and Jeon, M. (2021) Applying the Network Item Response Model to Student Assessment Data. <a herf="https://arxiv.org/abs/2003.07657" target="_blank">ArXiv:2003.07657.</a>
+            <span style="text-decoration: underline !important;"> Brodersen, A.</span>, <span style="font-weight: 700;">Jin, I.H.</span>, Cheng, Y., and Jeon, M. (2021) Applying the Network Item Response Model to Student Assessment Data. <a href="https://arxiv.org/abs/2003.07657" target="_blank">ArXiv:2003.07657.</a>
           </li>
         </ol>
       </div>
