minor change for mac

--- a/Home.html
+++ b/Home.html
@@ -314,7 +314,7 @@
                   <div class="u-container-style u-layout-cell u-size-23 u-layout-cell-4">
                     <div class="u-container-layout u-container-layout-4">
                       <h6 class="u-align-left u-custom-font u-font-montserrat u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-palette-1-base u-text-4">전예슬</h6>
-                      <p class="u-align-left u-text u-text-default u-text-5">각 박사과정마다 Heading reserch topic 넣기</p>
+                      <p class="u-align-left u-text u-text-default u-text-5">각 박사과정마다 reserch topic 넣기</p>
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-size-14 u-layout-cell-5">
