--- a/Members.html
+++ b/Members.html
@@ -111,6 +111,15 @@
               </p>
             </div>
           </div>
+          <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-6">
+            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-6">
+              <div class="u-align-center u-image u-image-circle u-preserve-proportions u-image-6" alt="" data-image-width="260" data-image-height="347"></div>
+              <h3 class="u-text u-text-17">김광희</h3>
+              <p class="u-text u-text-18" data-animation-name="" data-animation-duration="0" data-animation-direction=""> 통합과정 (2022-1)</p>
+              <p class="u-text u-text-19"><span class="u-file-icon u-icon u-icon-6"><img src="images/542689.png" alt=""></span>&nbsp; <a href="mailto:l2sw_@naver.com" class="email u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-6">musagh08@naver.com</a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -119,39 +128,21 @@
       </h2>
       <div class="u-align-center u-expanded-width-xs u-list u-list-1">
         <div class="u-repeater u-repeater-1">
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-1">
+          <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-1">
             <div class="u-container-layout u-similar-container u-container-layout-1">
               <div class="u-align-center u-image u-image-circle u-preserve-proportions u-image-1" alt="" data-image-width="149" data-image-height="200"></div>
-              <h3 class="u-text u-text-2">조수연</h3>
-              <p class="u-text u-text-3"> 석사과정 (2021-2)</p>
-              <p class="u-text u-text-4"><span class="u-file-icon u-icon u-icon-1"><img src="images/542689.png" alt=""></span>&nbsp; <a href="mailto:musagh08@naver.com" class="email u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1"> tnduss521@naver.com</a>
+              <h3 class="u-align-center u-text u-text-2">조수연</h3>
+              <p class="u-align-center u-text u-text-3"> 석사과정 (2021-2)</p>
+              <p class="u-align-center u-text u-text-4"><span class="u-file-icon u-icon u-icon-1"><img src="images/542689.png" alt=""></span>&nbsp; <a href="mailto:musagh08@naver.com" class="email u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1"> tnduss521@naver.com</a>
               </p>
             </div>
           </div>
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-2">
+          <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-2">
             <div class="u-container-layout u-similar-container u-container-layout-2">
-              <div class="u-align-center u-image u-image-circle u-preserve-proportions u-image-2" alt="" data-image-width="260" data-image-height="347"></div>
-              <h3 class="u-text u-text-5">김광희</h3>
-              <p class="u-text u-text-6"> 석사과정 (2022-1)</p>
-              <p class="u-text u-text-7"><span class="u-file-icon u-icon u-icon-2"><img src="images/542689.png" alt=""></span>&nbsp; <a href="mailto:musagh08@naver.com" class="email u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">musagh08@naver.com</a>
-              </p>
-            </div>
-          </div>
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-3">
-            <div class="u-container-layout u-similar-container u-container-layout-3">
-              <div class="u-align-center u-image u-image-circle u-preserve-proportions u-image-3" alt="" data-image-width="150" data-image-height="200"></div>
-              <h3 class="u-text u-text-8">신서영</h3>
-              <p class="u-text u-text-9"> 석사과정 (2022-2)</p>
-              <p class="u-text u-text-10"><span class="u-file-icon u-icon u-icon-3"><img src="images/542689.png" alt=""></span>&nbsp; <a href="mailto:musagh08@naver.com" class="email u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3"> seoyong@yonsei.ac.kr</a>
-              </p>
-            </div>
-          </div>
-          <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-4">
-            <div class="u-container-layout u-similar-container u-container-layout-4">
-              <div class="u-align-center u-image u-image-circle u-preserve-proportions u-image-4" alt="" data-image-width="150" data-image-height="200"></div>
-              <h3 class="u-text u-text-11">신서영</h3>
-              <p class="u-text u-text-12">Sample text. Click to select the Text Element.</p>
-              <p class="u-text u-text-13"><span class="u-file-icon u-icon u-icon-4"><img src="images/542689.png" alt=""></span>&nbsp; <a href="mailto:musagh08@naver.com" class="email u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4"> seoyong@yonsei.ac.kr</a>
+              <div class="u-align-center u-image u-image-circle u-preserve-proportions u-image-2" alt="" data-image-width="150" data-image-height="200"></div>
+              <h3 class="u-align-center u-text u-text-5">신서영</h3>
+              <p class="u-align-center u-text u-text-6"> 석사과정 (2022-2)</p>
+              <p class="u-align-center u-text u-text-7"><span class="u-file-icon u-icon u-icon-2"><img src="images/542689.png" alt=""></span>&nbsp; <a href="mailto:musagh08@naver.com" class="email u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">seoyong@yonsei.ac.kr</a>
               </p>
             </div>
           </div>
