--- a/index.html
+++ b/index.html
@@ -78,25 +78,10 @@
             <div class="u-list u-list-1">
               <div class="u-repeater u-repeater-1">
                 <div class="u-container-style u-list-item u-repeater-item">
-                  <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-file-icon u-icon u-icon-1"><img src="images/597177.png" alt=""></span>
+                  <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-custom-item u-file-icon u-icon u-icon-1"><img src="images/542689.png" alt=""></span>
                     <p class="u-align-left u-custom-font u-custom-item u-font-montserrat u-text u-text-3">
-                      <span style="font-style: italic;"></span>Cell: 82-10-9164-1597
-                    </p>
-                  </div>
-                </div>
-                <div class="u-container-style u-list-item u-repeater-item">
-                  <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-file-icon u-icon u-icon-2"><img src="images/13936.png" alt=""></span>
-                    <p class="u-align-left u-custom-font u-custom-item u-font-montserrat u-text u-text-4">
-                      <span style="font-style: italic;"> Office: </span>82-2-2123-2541
-                    </p>
-                  </div>
-                </div>
-                <div class="u-container-style u-list-item u-repeater-item">
-                  <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-file-icon u-icon u-icon-3"><img src="images/542689.png" alt=""></span>
-                    <p class="u-align-left u-custom-font u-custom-item u-font-montserrat u-text u-text-5">
-                      <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" href="mailto:ijin@yonsei.ac.kr">
-                        <span style="font-style: italic;"></span>ijin@yonsei.ac.kr
-                      </a>
+                      <span style="font-style: italic;"></span>
+                      <a href="mailto:ijin@yonsei.ac.kr" class="email u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">ijin@yonsei.ac.kr</a>
                     </p>
                   </div>
                 </div>
@@ -104,8 +89,8 @@
             </div>
           </div>
         </div>
-        <h3 class="u-align-left u-text u-text-6"> Academic Appointment</h3>
-        <blockquote class="u-align-left u-border-none u-text u-text-black u-text-7">
+        <h3 class="u-align-left u-text u-text-4"> Academic Appointment</h3>
+        <blockquote class="u-align-left u-border-none u-text u-text-black u-text-5">
           <span style="font-weight: 700;"></span>
           <span style="font-weight: 700; font-size: 1.25rem;">Yonsei University, Seoul, Republic of Korea.</span>
           <br>
@@ -139,8 +124,8 @@
           </span>
           <br>
         </blockquote>
-        <h3 class="u-align-left u-text u-text-8">Education</h3>
-        <blockquote class="u-align-left u-border-none u-text u-text-black u-text-9">
+        <h3 class="u-align-left u-text u-text-6">Education</h3>
+        <blockquote class="u-align-left u-border-none u-text u-text-black u-text-7">
           <span style="font-weight: 700;"></span>
           <span style="font-weight: 700; font-size: 1.25rem;">Texas A&amp;M University, College Station, Texas</span>
           <br>
@@ -157,14 +142,14 @@
           </span>
           <br>
         </blockquote>
-        <h3 class="u-align-left u-text u-text-10"> Editorial Service</h3>
-        <blockquote class="u-align-left u-border-none u-text u-text-black u-text-11">
+        <h3 class="u-align-left u-text u-text-8"> Editorial Service</h3>
+        <blockquote class="u-align-left u-border-none u-text u-text-black u-text-9">
           <span style="font-weight: 700;"> -&nbsp;</span>Associate Editor, Communications for Statistical Applications and Methods, 2017 -<br>
         </blockquote>
       </div>
     </section>
     <section class="u-clearfix u-valign-middle-md u-valign-middle-sm u-section-3" id="carousel_8b3d">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h2 class="u-align-center u-text u-text-1">Recent Topics </h2>
         <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
@@ -173,18 +158,18 @@
                 <div class="u-layout-row">
                   <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                     <div class="u-container-layout u-container-layout-1">
-                      <h6 class="u-align-left u-text u-text-default u-text-2">
-                        <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-1" href="files/CV_gwangheekim.pdf" target="_blank">박진아</a>
-                      </h6>
+                      <h6 class="u-align-left u-text u-text-default-xl u-text-2">박진아</h6>
                       <ul class="u-align-left u-text u-text-default u-text-3">
                         <li> Develop novel statistical/machine learning models for analyzing social influence and selection</li>
                         <li> Develop novel statistical methods for analyzing problem-solving process (web-log) data.<br>
                         </li>
                       </ul>
+                      <a href="files/CV_JinaPark.pdf" class="u-btn u-button-style u-file-link u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-1" target="_blank">More INFO&nbsp;<span class="u-icon u-text-palette-1-base"><svg class="u-svg-content" viewBox="0 -32 426.66667 426" style="width: 1em; height: 1em;"><path d="m213.332031 181.667969c0 4.265625-1.277343 8.53125-3.625 11.730469l-106.667969 160c-3.839843 5.761718-10.238281 9.601562-17.707031 9.601562h-64c-11.730469 0-21.332031-9.601562-21.332031-21.332031 0-4.269531 1.28125-8.535157 3.625-11.734375l98.773438-148.265625-98.773438-148.269531c-2.34375-3.199219-3.625-7.464844-3.625-11.730469 0-11.734375 9.601562-21.335938 21.332031-21.335938h64c7.46875 0 13.867188 3.839844 17.707031 9.601563l106.667969 160c2.347657 3.199218 3.625 7.464844 3.625 11.734375zm0 0"></path><path d="m426.667969 181.667969c0 4.265625-1.28125 8.53125-3.628907 11.730469l-106.664062 160c-3.839844 5.761718-10.242188 9.601562-17.707031 9.601562h-64c-11.734375 0-21.335938-9.601562-21.335938-21.332031 0-4.269531 1.28125-8.535157 3.628907-11.734375l98.773437-148.265625-98.773437-148.269531c-2.347657-3.199219-3.628907-7.464844-3.628907-11.730469 0-11.734375 9.601563-21.335938 21.335938-21.335938h64c7.464843 0 13.867187 3.839844 17.707031 9.601563l106.664062 160c2.347657 3.199218 3.628907 7.464844 3.628907 11.734375zm0 0"></path></svg><img></span>
+                      </a>
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
-                    <div class="u-container-layout u-valign-middle u-container-layout-2">
+                    <div class="u-container-layout u-valign-middle-lg u-valign-middle-xl u-container-layout-2">
                       <img class="u-align-center u-image u-image-circle u-image-1" src="images/T_PJA.png" alt="" data-image-width="150" data-image-height="200">
                     </div>
                   </div>
@@ -194,10 +179,10 @@
                 <div class="u-layout-row">
                   <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
-                      <h6 class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-text-palette-1-base u-text-4">전예슬</h6>
-                      <p class="u-align-left u-text u-text-default u-text-5">클릭하면 개인 CV 뜰 수 있게 설정하기(more information)</p>
-                      <p class="u-align-left u-text u-text-default u-text-6"><span class="u-icon"><svg class="u-svg-content" viewBox="0 0 511 511" style="width: 1em; height: 1em;"><path d="m114.59375 491.140625c-5.609375 0-11.179688-1.75-15.933594-5.1875-8.855468-6.417969-12.992187-17.449219-10.582031-28.09375l32.9375-145.089844-111.703125-97.960937c-8.210938-7.167969-11.347656-18.519532-7.976562-28.90625 3.371093-10.367188 12.542968-17.707032 23.402343-18.710938l147.796875-13.417968 58.433594-136.746094c4.308594-10.046875 14.121094-16.535156 25.023438-16.535156 10.902343 0 20.714843 6.488281 25.023437 16.511718l58.433594 136.769532 147.773437 13.417968c10.882813.980469 20.054688 8.34375 23.425782 18.710938 3.371093 10.367187.253906 21.738281-7.957032 28.90625l-111.703125 97.941406 32.9375 145.085938c2.414063 10.667968-1.726562 21.699218-10.578125 28.097656-8.832031 6.398437-20.609375 6.890625-29.910156 1.300781l-127.445312-76.160156-127.445313 76.203125c-4.308594 2.558594-9.109375 3.863281-13.953125 3.863281zm141.398438-112.875c4.84375 0 9.640624 1.300781 13.953124 3.859375l120.277344 71.9375-31.085937-136.941406c-2.21875-9.746094 1.089843-19.921875 8.621093-26.515625l105.472657-92.5-139.542969-12.671875c-10.046875-.917969-18.6875-7.234375-22.613281-16.492188l-55.082031-129.046875-55.148438 129.066407c-3.882812 9.195312-12.523438 15.511718-22.546875 16.429687l-139.5625 12.671875 105.46875 92.5c7.554687 6.613281 10.859375 16.769531 8.621094 26.539062l-31.0625 136.9375 120.277343-71.914062c4.308594-2.558594 9.109376-3.859375 13.953126-3.859375zm-84.585938-221.847656s0 .023437-.023438.042969zm169.128906-.0625.023438.042969c0-.023438 0-.023438-.023438-.042969zm0 0"></path></svg><img></span>&nbsp;Text with icon
-                      </p>
+                      <h6 class="u-align-left u-custom-font u-font-montserrat u-text u-text-palette-1-base u-text-4">전예슬</h6>
+                      <ul class="u-align-left u-text u-text-default u-text-5">
+                        <li> Develop novel visualization methods for topic model using network model.</li>
+                      </ul>
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-4">
@@ -211,53 +196,17 @@
                 <div class="u-layout-row">
                   <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-5">
                     <div class="u-container-layout u-container-layout-5">
-                      <img class="u-image u-image-circle u-image-3" src="images/T_KDY.png" alt="" data-image-width="150" data-image-height="200">
+                      <img class="u-image u-image-circle u-image-3" src="images/T_KYK.png" alt="" data-image-width="149" data-image-height="200">
                     </div>
                   </div>
                   <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-6">
                     <div class="u-container-layout u-container-layout-6">
-                      <h6 class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-text-palette-1-base u-text-7">고동영</h6>
-                      <p class="u-align-left u-text u-text-default u-text-8">각 박사과정마다 Heading reserch topic 넣기</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="u-clearfix u-gutter-0 u-layout-wrap u-layout-wrap-2">
-          <div class="u-gutter-0 u-layout">
-            <div class="u-layout-col">
-              <div class="u-size-30">
-                <div class="u-layout-row">
-                  <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-7">
-                    <div class="u-container-layout u-container-layout-7">
-                      <h6 class="u-align-left u-text u-text-default u-text-9">김인균</h6>
-                      <ul class="u-align-left u-text u-text-default u-text-10">
-                        <li> Develop novel statistical/machine learning models for analyzing social influence and selection</li>
-                        <li> Develop novel statistical methods for analyzing problem-solving process (web-log) data.<br>
-                        </li>
+                      <h6 class="u-align-left u-custom-font u-font-montserrat u-text u-text-default-lg u-text-default-xl u-text-palette-1-base u-text-6">김인균</h6>
+                      <ul class="u-align-left u-text u-text-default u-text-7">
+                        <li> Apply network item response modeling approach to political item responses.</li>
                       </ul>
-                    </div>
-                  </div>
-                  <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-8">
-                    <div class="u-container-layout u-container-layout-8">
-                      <img class="u-align-center u-image u-image-circle u-image-4" src="images/T_KYK.png" alt="" data-image-width="149" data-image-height="200">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="u-size-30">
-                <div class="u-layout-row">
-                  <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-9">
-                    <div class="u-container-layout u-container-layout-9">
-                      <h6 class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-text-palette-1-base u-text-11">이승원</h6>
-                      <p class="u-align-left u-text u-text-default u-text-12">각 박사과정마다 Heading reserch topic 넣기</p>
-                    </div>
-                  </div>
-                  <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-10">
-                    <div class="u-container-layout u-container-layout-10">
-                      <img class="u-align-center u-image u-image-circle u-image-5" src="images/T_LSY.jpeg" alt="" data-image-width="2160" data-image-height="2880">
+                      <a href="files/CV_KimInKyun.pdf" class="u-btn u-button-style u-file-link u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-2" target="_blank">More INFO&nbsp;<span class="u-icon u-text-palette-1-base"><svg class="u-svg-content" viewBox="0 -32 426.66667 426" style="width: 1em; height: 1em;"><path d="m213.332031 181.667969c0 4.265625-1.277343 8.53125-3.625 11.730469l-106.667969 160c-3.839843 5.761718-10.238281 9.601562-17.707031 9.601562h-64c-11.730469 0-21.332031-9.601562-21.332031-21.332031 0-4.269531 1.28125-8.535157 3.625-11.734375l98.773438-148.265625-98.773438-148.269531c-2.34375-3.199219-3.625-7.464844-3.625-11.730469 0-11.734375 9.601562-21.335938 21.332031-21.335938h64c7.46875 0 13.867188 3.839844 17.707031 9.601563l106.667969 160c2.347657 3.199218 3.625 7.464844 3.625 11.734375zm0 0"></path><path d="m426.667969 181.667969c0 4.265625-1.28125 8.53125-3.628907 11.730469l-106.664062 160c-3.839844 5.761718-10.242188 9.601562-17.707031 9.601562h-64c-11.734375 0-21.335938-9.601562-21.335938-21.332031 0-4.269531 1.28125-8.535157 3.628907-11.734375l98.773437-148.265625-98.773437-148.269531c-2.347657-3.199219-3.628907-7.464844-3.628907-11.730469 0-11.734375 9.601563-21.335938 21.335938-21.335938h64c7.464843 0 13.867187 3.839844 17.707031 9.601563l106.664062 160c2.347657 3.199218 3.628907 7.464844 3.628907 11.734375zm0 0"></path></svg><img></span>
+                      </a>
                     </div>
                   </div>
                 </div>
